add revision update endpoint
